<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="decline">Decline</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="_1k">1k</string>
    <string name="action_settings">Settings</string>
    <string name="ahri">Ahri</string>
    <string name="ahri_solo_mid_ap_100">Ahri solo Mid AP 100%</string>
    <string name="app_name">Champion Spotlight</string>
    <string name="armo">Giáp:</string>
    <string name="banner_ad_unit_id">ca-app-pub-3280281719755794/4642401260</string>
    <string name="blank">%d</string>
    <string name="build">Cách lên đồ</string>
    <string name="champion">Tướng</string>
    <string name="champions">Tướng</string>
    <string name="check_internet">Kiểm tra lại kết nối internet!</string>
    <string name="cong_skill">CỘNG SKILL:</string>
    <string name="dame">Sát thương:</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="find_player">TÌM KIẾM NGƯỜI CHƠI:</string>
    <string name="not_found_player">Không tìm thấy người chơi.</string>
    <string name="not_internet">Không có kết nối internet</string>
    <string name="not_upcase">(Không phân biệt chữ hoa, thường)</string>
    <string name="xem_gan_day">XEM GẦN ĐÂY:</string>
    <string name="yeu_thich">YÊU THÍCH:</string>
    <string name="dummy_content">"DUMMY
CONTENT"</string>
    <string name="exit">THOÁT</string>
    <string name="facebook_app_id">277605379246801</string>
    <string name="hinhanh_trangphuc">TRANG PHỤC</string>
    <string name="history">Lịch Sử</string>
    <string name="hoichieu">"Hồi chiêu: "</string>
    <string name="hoimau">Hồi máu:</string>
    <string name="hoinanguong">Hồi năng lượng:</string>
    <string name="hp">Máu:</string>
    <string name="huongdan">HƯỚNG DẪN</string>
    <string name="if_non_usage">"Đánh với "</string>
    <string name="if_usage">"Nếu chơi "</string>
    <string name="item">Trang bị</string>
    <string name="items">Trang bị</string>
    <string name="khangphep">Kháng phép:</string>
    <string name="khoangcach">"Khoảng cách: "</string>
    <string name="kynang">KỸ NĂNG</string>
    <string name="loitucvang">Lợi Tức Vàng</string>
    <string name="lore">TRUYỀN THUYẾT</string>
    <string name="mana">Năng lượng:</string>
    <string name="mastery">Bảng bổ trợ</string>
    <string name="meo">MẸO</string>
    <string name="native_ad_unit_id">ca-app-pub-3280281719755794/9271640065</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="ngoc_bo_tro">NGỌC BỔ TRỢ</string>
    <string name="not_connected_server">Không thể kết nối đến máy chủ!</string>
    <string name="other">OTHER</string>
    <string name="phepbotro">(Phép bổ trợ và Bảng ngọc)</string>
    <string name="range">Phạm vi:</string>
    <string name="report">Chat</string>
    <string name="rune">Ngọc bổ trợ</string>
    <string name="runes">Bảng ngọc</string>
    <string name="setting">Setting</string>
    <string name="share">Share</string>
    <string name="speed">Tốc độ di:</string>
    <string name="speed_attack">Tốc độ đánh:</string>
    <string name="strong_against">KHỎE KHI ĐÁNH VỚI</string>
    <string name="sumoner_rift">"SUMMONER'S RIFT"</string>
    <string name="tamnhin">Phụ Kiện</string>
    <string name="thongtin">THÔNG TIN</string>
    <string name="tieuhao">"Tiêu hao: "</string>
    <string name="time_create">Th2, 29-3-2016 (bởi: ukulele)</string>
    <string name="title_activity_activity_infor_champion">ActivityInforChampion</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_items">ItemsActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_runes">RunesActivity</string>
    <string name="title_fragment_champ">Tướng</string>
    <string name="title_fragment_changelog">Chi tiết cập nhật 6.16</string>
    <string name="title_fragment_items">Trang bị</string>
    <string name="title_fragment_runes">Ngọc bổ trợ (Bậc 3)</string>
    <string name="trang_b_ph_p_b_tr">TRANG BỊ &amp; PHÉP BỔ TRỢ</string>
    <string name="update_detail">Thông tin</string>
    <string name="updating_data">Updating data...</string>
    <string name="weak_against">YẾU KHI ĐÁNH VỚI</string>
    <string name="tongquan">Thông Tin</string>
    <string name="cachchoi">Cách Chơi</string>
    <string name="skin">Skin</string>
    <string name="storage">Bộ Nhớ</string>
    <string name="info_storage">Đọc Bộ Nhớ Trong</string>
</resources>
