<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_champion"
            android:icon="@drawable/ic_local_library_white_24dp"
            android:title="@string/champion" />
        <item
            android:id="@+id/nav_items"
            android:icon="@drawable/ic_gavel_white_24dp"
            android:title="@string/item" />
        <item
            android:id="@+id/nav_runes"
            android:icon="@drawable/ic_group_work_white_24dp"
            android:title="@string/rune" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_group_work_white_24dp"
            android:title="@string/history" />

    </group>
    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_white_24dp"
                android:title="@string/setting" />
            <item
                android:id="@+id/nav_share"
                android:actionProviderClass="android.widget.ShareActionProvider"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
        </menu>
    </item>
</menu>