<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/cardStyle"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/background">

    <RelativeLayout
        style="@style/layout_abilities"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/abilities_q_name"
            style="@style/abilities_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <ImageButton
            android:id="@+id/abilities_q_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_videocam_white_36dp" />

        <LinearLayout
            android:id="@+id/layout_q"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/abilities_q_name"
            android:orientation="horizontal"
            android:weightSum="10.0">

            <ImageView
                android:id="@+id/abilities_q_image"
                android:layout_width="45.0dip"
                android:layout_height="45.0dip"
                android:background="@drawable/image_item_boder"
                android:padding="1.0dip"
                android:src="@drawable/aatroxq" />

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginStart="10.0dip"
                android:layout_weight="10.0"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/abilities_q_cooldown"
                    style="@style/cost_cooldown_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hoichieu" />

                <TextView
                    android:id="@+id/abilities_q_cost"
                    style="@style/cost_cooldown_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tieuhao" />

                <TextView
                    android:id="@+id/abilities_q_range"
                    style="@style/cost_cooldown_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/khoangcach" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/abilities_q_detail"
            style="@style/abilities_detail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_q"
            android:text="" />
    </RelativeLayout>
</android.support.v7.widget.CardView>