<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wallpape">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10.0dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:text="@string/find_player"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_upcase"
            android:textSize="12.0sp"
            android:textStyle="italic" />


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:focusableInTouchMode="true"
            app:cardBackgroundColor="#44000000"
            app:cardCornerRadius="3.0dip">

            <android.support.v7.widget.SearchView
                android:id="@+id/search_summoner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxWidth="10000dp"
                android:queryHint="Tìm kiếm" />
        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip">

            <ImageView
                android:id="@+id/img_icon_player"
                android:layout_width="70.0dip"
                android:layout_height="70.0dip"
                android:background="@drawable/image_item_boder"
                android:padding="1.0dip"
                android:src="@drawable/aatrox"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_name_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_icon_player"
                android:text="MamTomNB"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="30.0dip"
                android:layout_height="30.0dip"
                android:layout_centerInParent="true"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_not_found"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/not_found_player"
                android:visibility="gone" />
        </RelativeLayout>

        <TextView
            android:id="@+id/title_lichsu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:text="LỊCH SỬ TÌM KIẾM"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcl_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip" />
    </LinearLayout>

</RelativeLayout>