<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="87.0dip"
    android:layout_marginBottom="4.0dip"
    android:layout_marginEnd="5.0dip"
    android:layout_marginStart="5.0dip"
    android:layout_marginTop="1.0dip"
    app:cardCornerRadius="2.0dip"
    app:cardElevation="3.0dip"
    app:cardMaxElevation="2.0dip">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/ripple1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="5.0dip"
            android:background="@drawable/image_item_boder"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_champ"
                android:layout_width="50.0dip"
                android:layout_height="50.0dip"
                android:background="@drawable/image_item_boder"
                android:contentDescription="@null"
                android:padding="1.0dip"
                android:src="@drawable/unchampion" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginTop="1.0dip"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_spellD"
                    android:layout_width="25.0dip"
                    android:layout_height="fill_parent"
                    android:background="@drawable/image_item_boder"
                    android:contentDescription="@null"
                    android:paddingBottom="1.0dip"
                    android:paddingEnd="0.5dip"
                    android:paddingStart="1.0dip"
                    android:scaleType="fitXY"
                    android:src="@drawable/untitled" />

                <ImageView
                    android:id="@+id/img_spellF"
                    android:layout_width="25.0dip"
                    android:layout_height="fill_parent"
                    android:background="@drawable/image_item_boder"
                    android:contentDescription="@null"
                    android:paddingBottom="1.0dip"
                    android:paddingEnd="1.0dip"
                    android:paddingStart="0.5dip"
                    android:scaleType="fitXY"
                    android:src="@drawable/untitled" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5.0dip">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_thumb_up_white_24dp" />

                <TextView
                    android:id="@+id/tv_like_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10.0dip"
                    android:paddingEnd="10.0dip"
                    android:text="@string/_1k"
                    android:textColor="@color/white" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_tenbanbuild"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/ahri_solo_mid_ap_100"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_ngaytao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_tenbanbuild"
                android:singleLine="true"
                android:text="@string/time_create"
                android:textColor="@color/white"
                android:textSize="12.0sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_ngaytao"
                android:layout_marginTop="5.0dip"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_item_1"
                    android:layout_width="38.0dip"
                    android:layout_height="fill_parent"
                    android:background="@drawable/image_item_boder"
                    android:contentDescription="@null"
                    android:padding="1.0dip"
                    android:scaleType="fitXY"
                    android:src="@drawable/untitled" />

                <ImageView
                    android:id="@+id/img_item_2"
                    android:layout_width="38.0dip"
                    android:layout_height="fill_parent"
                    android:layout_marginStart="1.0dip"
                    android:background="@drawable/image_item_boder"
                    android:contentDescription="@null"
                    android:padding="1.0dip"
                    android:scaleType="fitXY"
                    android:src="@drawable/untitled" />

                <ImageView
                    android:id="@+id/img_item_3"
                    android:layout_width="38.0dip"
                    android:layout_height="fill_parent"
                    android:layout_marginStart="1.0dip"
                    android:background="@drawable/image_item_boder"
                    android:contentDescription="@null"
                    android:padding="1.0dip"
                    android:scaleType="fitXY"
                    android:src="@drawable/untitled" />

                <ImageView
                    android:id="@+id/img_item_4"
                    android:layout_width="38.0dip"
                    android:layout_height="fill_parent"
                    android:layout_marginStart="1.0dip"
                    android:background="@drawable/image_item_boder"
                    android:contentDescription="@null"
                    android:padding="1.0dip"
                    android:scaleType="fitXY"
                    android:src="@drawable/untitled" />

                <ImageView
                    android:id="@+id/img_item_5"
                    android:layout_width="38.0dip"
                    android:layout_height="fill_parent"
                    android:layout_marginStart="1.0dip"
                    android:background="@drawable/image_item_boder"
                    android:contentDescription="@null"
                    android:padding="1.0dip"
                    android:scaleType="fitXY"
                    android:src="@drawable/untitled" />

                <ImageView
                    android:id="@+id/img_item_6"
                    android:layout_width="38.0dip"
                    android:layout_height="fill_parent"
                    android:layout_marginStart="1.0dip"
                    android:background="@drawable/image_item_boder"
                    android:contentDescription="@null"
                    android:padding="1.0dip"
                    android:scaleType="fitXY"
                    android:src="@drawable/untitled" />

                <ImageView
                    android:id="@+id/img_item_7"
                    android:layout_width="38.0dip"
                    android:layout_height="fill_parent"
                    android:layout_marginStart="5.0dip"
                    android:background="@drawable/image_item_boder"
                    android:contentDescription="@null"
                    android:padding="1.0dip"
                    android:scaleType="fitXY"
                    android:src="@drawable/untitled" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>